// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionItem matches the snapshots when a question is passed 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full md:w-[400px] lg:w-[300px]"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        sarahedo
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        11:32 AM | 20/08/2024
      </p>
    </div>
    <hr />
    <div
      class="p-6 pt-3"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 w-full border-primary"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`QuestionItem matches the snapshots when a question is passed 2`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full md:w-[400px] lg:w-[300px]"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      />
      <p
        class="text-sm text-muted-foreground"
      >
        11:32 AM | 20/08/2024
      </p>
    </div>
    <hr />
    <div
      class="p-6 pt-3"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 w-full border-primary"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;
